frame/support/test/tests/pallet_ui/storage_value_unexpected_named_generic.stderr
error: Invalid `StorageValue`, cannot find `Value` generic
  --> $DIR/storage_value_unexpected_named_generic.rs:19:28
   |
19 |     type Foo<T> = StorageValue<P = u32>;
   |                               ^
